--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,13 +33,16 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css">
     <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
 
+    <!-- Plotly -->
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
     <!-- Local -->
     <script src="auth.js"></script>
     <script src="experiments.js"></script>
 
     <script>
       $(document).ready(function(){
-        ensure_auth();
+        <!--ensure_auth();-->
         list_experiments();
       })
     </script>
@@ -56,7 +59,6 @@
       </div>
 
       <div id="experiments-container">
-        <h2>Experiments</h2>
         <table class="table" id="experiments">
           <thead id="experiments-header"></thead>
           <tbody id="experiments-body"></tbody>
