--- a/client/public/index.html
+++ b/client/public/index.html
@@ -42,7 +42,7 @@
 
     <script>
       $(document).ready(function(){
-        <!--ensure_auth();-->
+        ensure_auth();
         list_experiments();
       })
     </script>
