--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,39 +21,50 @@
     <script type="text/javascript" src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <!-- Local -->
+    <script src="table.js"></script>
     <script src="auth.js"></script>
     <script src="main.js"></script>
 
-    <script type="text/x-template" id="grid-template">
-      <table>
-        <thead>
-          <tr>
-            <th v-for="key in columns"
-              @click="sortBy(key)"
-              :class="{ active: sortKey == key }">
-              {{ key | capitalize }}
-              <span class="arrow" :class="sortOrders[key] > 0 ? 'asc' : 'dsc'">
-              </span>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr v-for="entry in filteredData">
-            <td v-for="key in columns">
-              {{entry[key]}}
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </script>
+    <!-- Templates -->
+    <template id="vtable">
+        <div>
+            <table class="table table-striped">
+                <tr>
+                    <th v-for="col in header" style="white-space: nowrap;">
+                        <a @click="sort_by(col)">{{col}}</a>
+                        <span v-if="sort_key === col" class="glyphicon" :class="(sort_order === 'asc')? 'glyphicon-arrow-up' : 'glyphicon-arrow-down'"></span>
+                        <span v-if="sort_key !== col" class="glyphicon glyphicon-arrow-up" style="opacity: 0.25"></span>
+                    </th>
+                    <th v-if="show || remove"></th>
+                </tr>
+                <tr v-for="row in processed_data">
+                    <td v-for="col in header">{{row[col]}}</td>
+                    <td v-if="show || remove">
+                        <button v-if="show" class="btn btn-primary" @click="show(row)">Show</button>
+                        <button v-if="remove" class="btn btn-danger" @click="remove(row)">Remove</button>
+                    </td>
+                </tr>
+            </table>
+            <nav aria-label="...">
+                <ul class="pagination">
+                    <li><a @click="change_page(current_page-1)" href="#" aria-label="Previous"><span>Prev</span></a></li>
+                    <li
+                        v-for="i in page_nums" :class="current_page == i? 'active' : ''"
+                        @click="change_page(i)"
+                    ><a href="#">{{i + 1}}</a></li>
+                    <li><a @click="change_page(current_page+1)" href="#" aria-label="Next"><span>Next</span></a></li>
+                </ul>
+            </nav>
+        </div>
+    </template>
+
 </head>
 
 <body>
     <div id="app" class="container">
         <h1>{{title}}</h1>
-         <div id="detailed-block">
+        <div id="detailed-block">
             <div v-if="detailed">
-                <h2>{{detailed_name}}</h2>
                 <div class="input-group">
                     <select class="selectpicker" id="detailed-plot-x">
                         <option :selected="i == 0 || label === 'iteration'" v-for="(label, i) in detailed_labels">{{label}}</option>
@@ -66,41 +77,42 @@
                     <button @click="detailed_close()" class="btn btn-danger">Close</button>
                 </div>
                 <div id="detailed-plot"></div>
-                <table class="table table-striped" id="detailed-table">
-                    <thead>
-                        <tr>
-                            <th v-for="label in detailed_labels">{{label}}</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr v-for="row in detailed_log">
-                            <td v-for="label in detailed_labels">{{row[label]}}</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <vtable
+                    :header="detailed_labels"
+                    :rows="detailed_log"
+                    :page_size="10"
+                ></vtable>
             </div>
         </div>
+
         <div id="experiments-block">
             <h2>Experiments</h2>
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Experiment</th>
-                        <th># Entries</th>
-                        <th>Options</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr v-for="e in experiments">
-                        <td>{{e['.key']}}</td>
-                        <td>{{Object.keys(e).length-1}}</td>
-                        <td>
-                            <button class="btn btn-primary" @click="detailed_show(e)">Show</button>
-                            <button class="btn btn-danger" @click="delete_experiment(e)">Delete</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <vtable
+                :header="experiments_header"
+                :rows="processed_experiments"
+                :page_size="10"
+                :show="show"
+                :remove="remove"
+            ></vtable>
+            <!--<table class="table table-striped">-->
+                <!--<thead>-->
+                    <!--<tr>-->
+                        <!--<th>Experiment</th>-->
+                        <!--<th># Entries</th>-->
+                        <!--<th>Options</th>-->
+                    <!--</tr>-->
+                <!--</thead>-->
+                <!--<tbody>-->
+                    <!--<tr v-for="e in experiments">-->
+                        <!--<td>{{e['.key']}}</td>-->
+                        <!--<td>{{Object.keys(e).length-1}}</td>-->
+                        <!--<td>-->
+                            <!--<button class="btn btn-primary" @click="detailed_show(e)">Show</button>-->
+                            <!--<button class="btn btn-danger" @click="delete_experiment(e)">Delete</button>-->
+                        <!--</td>-->
+                    <!--</tr>-->
+                <!--</tbody>-->
+            <!--</table>-->
         </div>
     </div>
 </body>
